--- a/src/App.css
+++ b/src/App.css
@@ -12,17 +12,24 @@ h1{
   background-image: linear-gradient(to top, #96fbc4 0%, #f9f586 100%);
   height: 4rem;
   color: #fff;
+  display: grid;
+  justify-content: space-evenly;
+  grid-template-columns: auto auto auto;
   text-shadow: 2px 2px 2px #000;
+  line-height: 1;
 }
 
 .navbar h1{
   font-size: 3rem;
   margin-top: 0;
-  text-align: center;
-  line-height: 1;
 }
 
 .navbar a{
   text-decoration: none;
   color: #fff;
+}
+
+.MuiInputBase-input{
+  text-shadow: 2px 2px 2px #000;
+  font-weight: bold !important;
 }
