--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* globals */
 body{
-  font-family: cabin, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 h1{
@@ -27,6 +27,7 @@ h1{
 .navbar a{
   text-decoration: none;
   color: #fff;
+  font-weight: bold;
 }
 
 .MuiInputBase-input{
