--- a/src/App.css
+++ b/src/App.css
@@ -49,12 +49,42 @@ h1{
   }
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 900px){
   .stash-grid{
     margin: 1rem 0 1rem 2rem;
     display: grid;
     grid-template-columns: auto auto auto auto;
     gap: 1rem 1rem;
     justify-content: space-evenly;
+  }
+}
+
+/* single pattern */
+.dialog{
+  display: grid;
+  grid-template-columns: auto;
+  gap: 1rem 1rem;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.dialog h2{
+  text-align: center;
+  color: #000;
+}
+
+.dialog img{
+  width: 15rem;
+}
+
+@media only screen and (min-width: 600px) {
+  .dialog img{
+    width: 40rem;
+  }
+}
+
+@media screen and (min-width: 900px){
+  .dialog img{
+    width: 50rem;
   }
 }
