--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@ h1{
   font-family: damion, sans-serif;
 }
 
+.container {
+  margin: 5rem 2rem;
+}
+
 .form-margin{
   margin: 1.5rem;
 }
@@ -27,13 +31,17 @@ h1{
 /* navbar */
 .navbar{
   background-image: linear-gradient(to right, #c55a5a 0%, #b47ec4 25%, #7b7cd3 50%, #67bdb5 75%, #7fbd7f 100%);
-  height: 4rem;
   color: #fff;
   display: grid;
-  justify-content: space-evenly;
   grid-template-columns: auto auto auto;
-  text-shadow: 2px 2px 2px #000;
+  height: 4rem;
+  justify-content: space-evenly;
   line-height: 1;
+  position: fixed;
+  text-shadow: 2px 2px 2px #000;
+  top: 0;
+  width: 100%;
+  z-index: 10;
 }
 
 .navbar h1{
